# rust_api

./: .gitignore  Cargo.toml  Dockerfile  README.md
.devcontainer/: Near-Dockerfile  Solana-Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: backlog_item.md  bug_issue.md  general_issue.md
.github/workflows/: check-license.yml  tests.yml
common/: Cargo.toml  README.md
common/src/: access.rs  access_control_registry.rs  agg.rs  beacon.rs  dapi_server.rs  datapoint.rs  dummy.rs  error.rs  eth.rs  lib.rs  manager.rs  types.rs  util.rs  whitelist.rs
common/src/abi/: adaptor.rs  decode.rs  encode.rs  mod.rs  types.rs
common/src/util/: median.rs  sort.rs
near/client-test/: package-lock.json  package.json
near/client-test/neardev/: dev-account  dev-account.env
near/client-test/src/: client.js  config.js  test.js  util.js
near/client-test/src/tests/: derive.js  extendWhitelistExpiration.js  readDataFeedWithDapiName.js  readDataFeedWithId.js  readerCanReadDataFeed.js  revokeIndefiniteWhitelistStatus.js  role.js  setIndefiniteWhitelistStatus.js  setName.js  setWhitelistExpiration.js  updateBeaconSetWithBeacons.js  updateBeaconSetWithSignedData.js  updateBeaconWithSignedData.js  whitelist.js
near/client-test/tests/: test.spec.js
near/client-test/tests/utils/: derive.js  extendWhitelistExpiration.js  readDataFeedWithDapiName.js  readDataFeedWithId.js  readerCanReadDataFeed.js  revokeIndefiniteWhitelistStatus.js  role.js  setIndefiniteWhitelistStatus.js  setName.js  setWhitelistExpiration.js  updateBeaconSetWithBeacons.js  updateBeaconSetWithSignedData.js  updateBeaconWithSignedData.js  whitelist.js
near/contract/: Cargo.toml
near/contract/src/: dapi_server.rs  lib.rs  near_whitelist.rs  types.rs  utils.rs  whitelist.rs
near/cross-contract-call-demo/: Cargo.toml
near/cross-contract-call-demo/src/: lib.rs
solana/.devcontainer/: Dockerfile  devcontainer.json
solana/beacon-server/: Anchor.toml  package-lock.json  package.json
solana/beacon-server/programs/beacon-server/: Cargo.toml
solana/beacon-server/programs/beacon-server/src/: access.rs  lib.rs  utils.rs  whitelist.rs
solana/beacon-server/tests/: beacon-server.spec.ts  beacon-server.ts  client.ts  sig.ts  utils.ts
