[package]
name = "api3-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
recovery = ["libsecp256k1", "getrandom/dummy"]
default = []

[dependencies]
borsh = "0.8.2" # need to match with near-sdk borsh version
ethabi = { version = "12.0.0" }
derive_more = "0.99.17"
ethereum-types  = "0.13.1"
serde = "1"
getrandom = { version = "0.1.16", features = ["dummy"] }
uint = { version = "0.8.5", optional = true }
hex = "0.4.3"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
libsecp256k1 = { version = "0.6.0", optional = true }

[dev-dependencies]
hex-literal = "0.3"
ethereum-types = "0.13.1"
libsecp256k1 = "0.6.0"
web3 = "0.18.0"
rand = "0.8.5"
