[package]
name = "api3-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dummy"]
dummy = []

[dependencies]
borsh = "0.8.2" # need to match with near-sdk borsh version
derive_more = "0.99.17"
serde = "1"
uint = { version = "0.9.0" }
hex = "0.4.3"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
thiserror = "1"

[dev-dependencies]
hex-literal = "0.3"
ethereum-types = "0.13.1"
libsecp256k1 = "0.6.0"
web3 = "0.18.0"
rand = "0.8.5"
ethabi = { version = "17.0.0" }
