[package]
name = "beacon-server"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "beacon_server"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["api3-common/eth"]

[dependencies]
anchor-lang = { version = "0.23.0", features = ["init-if-needed"] }
api3-common = { path = "../../../../common", default-features = false, features = ["eth"] }
